<resources>
    <string name="app_name">SibSefid</string>
    <string name="title_activity_login">Sign in</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBEkuB0buBxUidWfBx4wyVXojAvfvDVhm4 </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_please_old">Please enter the valid old password</string>
    <string name="error_invalid_confirm_password">This Confirm password is too short</string>
    <string name="error_invalid_both_pass">This Confirm password and password should be same!</string>
    <string name="error_invalid_both_pass_old">This Old password is incorrect!</string>
    <string name="error_invalid_first_name">This Name is invalid</string>
    <string name="error_invalid_last_name">This Name is invalid</string>
    <string name="error_invalid_country">This Country name is invalid</string>
    <string name="error_invalid_speciality">This Specialty name is invalid</string>
    <string name="error_invalid_pracitice">This Practice year is invalid</string>
    <string name="error_invalid_phone_number">This Phone Number is invalid</string>
    <string name="error_invalid_npi_number">This NPINumber is invalid</string>
    <string name="error_invalid_state_name">This State Name is invalid</string>
    <string name="error_invalid_licence_number">This LicenceNumber is invalid</string>
    <string name="error_invalid_spoken_language">This SpokenLanguage is invalid</string>
    <string name="error_invalid_city">This City is invalid</string>
    <string name="error_invalid_address">This Address is invalid</string>
    <string name="error_invalid_post_code">This Post Code number is invalid</string>
    <string name="error_invalid_dob">This DOB is invalid</string>
    <string name="error_invalid_zip">This Zip number is invalid</string>
    <string name="error_invalid_qualification">Qualification field should not be empty</string>
    <string name="error_invalid_fee">This fee amount is invalid</string>
    <string name="error_invalid_message">This Message field should not be empty</string>
    <string name="error_invalid_date">Please select valid date!</string>
    <string name="error_invalid_hours">Please select valid hours!</string>
    <string name="error_invalid_minute">Please select valid minutes!</string>
    <string name="error_invalid_time">Please select valid time!</string>
    <string name="error_invalid_chat_type">Please select valid chat type!</string>
    <string name="error_invalid_medicare_no">Invalid medicare number</string>
    <string name="error_invalid_first_name_not_text">Name should have alphabets only </string>
    <string name="error_field_required">This field is required</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_as_patient">Login As Patient</string>
    <string name="login_as_provider">Login As Provider</string>
    <string name="click_here">Click here</string>
    <string name="click_here_if_you">if you are receiving  Sib Sefid as a group benefit.</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot your password?</string>
    <string name="you_dont_have">You don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="forgot_pass_1">Forgot Password</string>
    <string name="forgot_pass_2">Please provide the registered email address so that we will send you an email that will allow you to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="file_name">File Name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="address">Address</string>
    <string name="address_1">Address 2</string>
    <string name="city">City</string>
    <string name="select_state">Select State</string>
    <string name="post_code">Post Code</string>
    <string name="dob">DOB</string>
    <string-array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>

    </string-array>
    <string name="register">Register</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action">Action</string>
    <string name="dial_911">Dial911</string>
    <string name="for_medical_emerangcy">For medical Emergency</string>
    <string name="notification">Notification</string>
    <string name="my_details">My Details</string>
    <string name="my_helth_history">My Health History</string>
    <string name="my_message">My Message</string>
    <string name="see_doctor">See Doctor</string>
    <string name="my_appointment">My Appointment</string>
    <string name="my_medicine_remindert">Medicine Reminder</string>
    <string name="my_reminder_set">Reminder Set</string>
    <string name="my_reminder_list">Reminder List</string>
    <string name="medicine_name">MEDICINE NAME</string>
    <string name="my_billing">My Billing</string>
    <string name="my_result">My Result</string>
    <string name="trackers">Trackers</string>
    <string name="symptom_checker">Symptom Checker</string>
    <string-array name="namearray">
        <item>@string/my_details</item>
        <item>@string/my_helth_history</item>
        <item>@string/my_message</item>
        <item>@string/see_doctor</item>
        <item>@string/my_appointment</item>
        <item>@string/my_billing</item>
        <item>@string/my_result</item>
        <item>@string/trackers</item>
        <item>@string/symptom_checker</item>
        <item>@string/my_medicine_remindert</item>
    </string-array>
    <string name="account_details">Account \nDetails</string>
    <string name="billing_information">Billing \ninformation</string>
    <string name="family_information">Family \nInformation</string>
    <string name="title_m">Title:*</string>
    <string name="select_language">Select Language*</string>
    <string name="lastname_m">Last Name:</string>
    <string name="email_m">Email:*</string>
    <string name="dob_m">Date of Birth:*</string>
    <string name="medicare_number_m">Medicare Number:*</string>
    <string name="gender_m">Gender:*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="country_m">Country:*</string>
    <string name="state_m">State:*</string>
    <string name="city_suburb_m">City/Suburb:*</string>
    <string name="address_m">Address Line 1:*</string>
    <string name="address_2_m">Address Line 2:*</string>
    <string name="mobile_m">Mobile:*</string>
    <string name="ememrgency_no_m">Emergency No:</string>
    <string name="update_profile">Update Profile</string>
    <string name="summery">Summary</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="make_my_result">Make all My Result</string>
    <string name="visible_or">Visible or</string>
    <string name="invisible_for_doctor_for">Invisible for  </string>
    <string name="my_next_appointment">the doctor for my next appointment</string>
    <string name="if_you_issue">If you issues is an emergency , please dial 911 or go to the nearest emergency room. SibSefid does not offer emergency service.</string>
    <string name="about_me">About Me</string>
    <string name="qualication">Qualification</string>
    <string name="licensed_state">Licensed State</string>
    <string name="schedule">Schedule</string>
    <string name="choose_first_available">Choose First Available</string>
    <string name="visit_now">Visit Now</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="book_an_appointment_request">Appointment Request</string>
    <string name="patient">Patient: </string>
    <string name="patient_capital">PATIENT: </string>
    <string name="provider">Provider: </string>
    <string name="date">Date:* </string>
    <string name="would_you_like_this_appointment_by_">Would you like this appointment by video or phone?</string>
    <string name="please_enter_phone">Please enter the phone number we should call:</string>
    <string name="chat">Chat</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="cancel">Cancel</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="my_past_appointment">My Past Appointment</string>
    <string name="my_future_appointment">My Future Appointment</string>
    <string name="status">Status: </string>
    <string name="communication_not">Communication Note</string>
    <string name="my_history">My History</string>
    <string name="my_life_style">My Life Style</string>
    <string name="my_family_history">My Family History</string>
    <string name="allergies">Allergies:</string>
    <string name="do_you_have_allergies">Do you have allergies?</string>
    <string name="medication_history">Medication History:</string>
    <string name="enter_strength">Enter Strength</string>
    <string name="does_how_many_time">Does/(How many times/day)</string>
    <string name="past_medical_sergical_history"><![CDATA[Past Medical & Surgical History]]></string>
    <string name="smoking">Smoking: </string>
    <string name="do_you_smoke">Do you smoke?</string>
    <string name="alcohol">Alcohol: </string>
    <string name="do_you_take_alcohol">Do you take alcohol?</string>
    <string name="family_history">Family History:</string>
    <string name="doctor">Doctor</string>
    <string name="blog">Blog</string>
    <string name="medical_device">Medical Devices</string>
    <string name="faq">Faq</string>
    <string name="contact_us">Contact us</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="full_body">Full Body</string>
    <string name="head_of_brain">Head of Brain</string>
    <string name="gentilas_or_urinary">Gentilas or Urinary</string>
    <string name="abdomen">Abdomen</string>
    <string name="leg">Leg</string>
    <string name="arm">Arm</string>
    <string name="neck_or_back">Neck or Back</string>
    <string name="chest">Chest</string>
    <string name="mouth_or_teeth">Mouth or Teeth</string>
    <string name="neck">Neck</string>
    <string name="nose">Nose</string>
    <string name="ears">Ears</string>
    <string name="skin">Skin</string>
    <string name="eyes">Eyes</string>
    <string name="other_symptoms">Other Symptoms</string>
    <string name="member_name">Name</string>
    <string name="member_email">Email</string>
    <string name="member_relation">Relation</string>
    <string name="member_genderl">Gender</string>
    <string name="s_no">No.</string>
    <string name="appointment_date">Appointment Date:</string>
    <string name="appointment_mode">Mode</string>
    <string name="fee">Fee : </string>
    <string name="date_">Date:</string>
    <string name="print_receipt">Print Receipt :</string>
    <string name="billing_address_new">200 Braker Ave, Lowell MA 01830 \nUnited States \nPhone: 774-108-1234 \nSibSefid@gmail.com</string>
    <string name="appointment_status">Appointment Status:</string>
    <string name="time_">Time:</string>
    <string name="doctor_name">Doctor Name:</string>
    <string name="payment_by">Payment By:</string>
    <string name="no_record_found">No Record Found</string>
</resources>