<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"


    >

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_bg"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/mBlogBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"

            android:padding="10dp"
            android:text="@string/blog"
            android:textSize="@dimen/text_size_m"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888"></View>

        <TextView
            android:id="@+id/mMedicalDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"

            android:text="@string/medical_device"
            android:textSize="@dimen/text_size_m"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888"></View>

        <TextView
            android:id="@+id/mFaqBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/faq"
            android:textSize="@dimen/text_size_m"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888"></View>

        <TextView
            android:id="@+id/mContactUsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/contact_us"
            android:textSize="@dimen/text_size_m"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888"></View>

        <TextView
            android:id="@+id/mChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/change_password"
            android:textSize="@dimen/text_size_m"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888"></View>

        <TextView
            android:id="@+id/mLogoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/logout"
            android:textSize="@dimen/text_size_m"

            />


    </LinearLayout>

</LinearLayout>
