<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:background="@drawable/trans_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/full_body"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_l"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/head_of_brain"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/gentilas_or_urinary"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#888" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/abdomen"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/leg"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/arm"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/neck_or_back"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="10dp"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="@string/chest"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/mouth_or_teeth"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="#888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="10dp"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="@string/neck"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/nose"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="10dp"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="@string/ears"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/skin"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="10dp"
                android:layout_weight="1"

                android:gravity="center_vertical"
                android:text="@string/eyes"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_30"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/other_symptoms"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_default_11" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
