<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="2dp">


    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView android:id="@+id/noDataFoundText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_record_found"
        android:textSize="@dimen/dp_20"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="@color/red"/>
    <LinearLayout
        android:id="@+id/headLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/added_member_head"
        android:orientation="horizontal"
        android:padding="3dp"
        android:weightSum="8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/member_name"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_1"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/member_email"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_1"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/member_relation"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp_1"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/member_genderl"
            android:textSize="@dimen/dp_12" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/listMember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headLayout"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_5"
        android:background="@drawable/added_member_list"

        android:padding="2dp"
        app:layoutManager="LinearLayoutManager">

    </android.support.v7.widget.RecyclerView>
</RelativeLayout>